--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.15",
     "@tanstack/react-query": "^5.74.4",
     "@tanstack/react-router": "^1.117.0",
+    "@tanstack/react-virtual": "^3.13.8",
     "@workspace/ui": "workspace:*",
     "axios": "^1.8.4",
     "better-auth": "^1.2.7",
