--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "masonic": "^4.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "yet-another-react-lightbox-lite": "^1.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
