--- a/.github/workflows/process-images.yml
+++ b/.github/workflows/process-images.yml
@@ -58,7 +58,7 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add public/img/ public/data.json
-        git rm uploads/* 2>/dev/null || true
+        find uploads -type f -not -name '.gitkeep' -delete 2>/dev/null || true
         if git diff --staged --quiet; then
           echo "No changes to commit"
         else
